--- a/sample/src/main/res/drawable-v21/flat_button_dark.xml
+++ b/sample/src/main/res/drawable-v21/flat_button_dark.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="?android:colorControlHighlight">
+        android:color="@color/ripple_material_light">
     <item
         android:id="@android:id/mask"
         android:drawable="?android:colorButtonNormal"/>
