--- a/sample/src/main/res/drawable-v21/flat_button_light.xml
+++ b/sample/src/main/res/drawable-v21/flat_button_light.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="#FFF">
+        android:color="@color/ripple_material_dark">
     <item
         android:id="@android:id/mask"
-        android:color="#8FFF"/>
+        android:drawable="?android:colorButtonNormal"/>
 </ripple>
