--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -3,22 +3,68 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:paddingLeft="@dimen/activity_horizontal_margin"
-             android:paddingRight="@dimen/activity_horizontal_margin"
+             android:paddingLeft="8dp"
+             android:paddingRight="8dp"
              tools:context=".MainActivity">
 
-    <com.greenfrvr.hashtagview.HashtagView
-        android:id="@+id/hashtag_view"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:itemBackground="@drawable/rounded_rect"
-        app:itemForeground="@drawable/flat_button_light"
-        app:itemMinWidth="48dp"
-        app:itemPaddingBottom="8dp"
-        app:itemPaddingLeft="6dp"
-        app:itemPaddingRight="6dp"
-        app:itemPaddingTop="8dp"
-        app:itemTextColor="#E5E5E5"/>
+        android:layout_height="match_parent"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp">
+
+            <com.greenfrvr.hashtagview.HashtagView
+                android:id="@+id/hashtag_view_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:itemBackground="@drawable/rounded_rect_1"
+                app:itemForeground="@drawable/flat_button_light"
+                app:itemPaddingBottom="8dp"
+                app:itemPaddingLeft="6dp"
+                app:itemPaddingRight="6dp"
+                app:itemPaddingTop="8dp"
+                app:itemTextColor="#E5E5E5"
+                app:itemTextGravity="right"
+                app:itemTextSize="16sp"
+                app:rowGravity="center"
+                app:rowMode="wrap"/>
+
+            <com.greenfrvr.hashtagview.HashtagView
+                android:id="@+id/hashtag_view_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <com.greenfrvr.hashtagview.HashtagView
+                android:id="@+id/hashtag_view_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                app:itemBackground="@drawable/rounded_rect_1"
+                app:itemForeground="@drawable/flat_button_light"
+                app:itemMargin="4dp"
+                app:itemPaddingBottom="8dp"
+                app:itemPaddingLeft="6dp"
+                app:itemPaddingRight="6dp"
+                app:itemPaddingTop="8dp"
+                app:itemTextColor="#E5E5E5"
+                app:itemTextGravity="center"
+                app:itemTextSize="16sp"
+                app:rowMargin="2dp"
+                app:itemMinWidth="48dp"
+                app:rowMode="stretch"
+                app:selectionMode="true"/>
+
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
