--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="min_width">48dp</dimen>
+    <dimen name="item_margin">2dp</dimen>
+    <dimen name="row_margin">2dp</dimen>
+    <dimen name="padding_horizontal">8dp</dimen>
+    <dimen name="padding_vertical">6dp</dimen>
 </resources>
