--- a/sample/src/main/res/layout/fragment_base_sample.xml
+++ b/sample/src/main/res/layout/fragment_base_sample.xml
@@ -3,38 +3,52 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:orientation="vertical"
-             android:paddingBottom="10dp"
-             android:paddingLeft="16dp"
-             android:paddingRight="16dp"
-             android:paddingTop="10dp">
+             android:paddingLeft="10dp"
+             android:paddingRight="10dp"
+             android:paddingTop="4dp">
 
-    <!--<android.support.v7.widget.CardView-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content">-->
+    <android.support.v7.widget.CardView
+        style="@style/Card"
+        app:cardUseCompatPadding="true">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.greenfrvr.hashtagview.HashtagView
-            android:id="@+id/hashtags"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:itemBackground="@drawable/rounded_rect_1"
-            app:itemForeground="@drawable/flat_button_light"
-            app:itemPaddingBottom="8dp"
-            app:itemPaddingLeft="6dp"
-            app:itemPaddingRight="6dp"
-            app:itemPaddingTop="8dp"
-            app:itemTextColor="#E5E5E5"
-            app:itemTextGravity="right"
-            app:itemTextSize="16sp"
-            app:rowGravity="center"
-            app:rowMode="wrap"/>
+            android:orientation="vertical"
+            android:padding="16dp">
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="10dp"
+                android:paddingLeft="48dp"
+                android:paddingRight="48dp"
+                android:text="Simple way to represent\nyour #hashtags data"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="18sp"/>
 
-    <!--</android.support.v7.widget.CardView>-->
+            <com.greenfrvr.hashtagview.HashtagView
+                android:id="@+id/hashtags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                app:tagBackground="@drawable/rounded_rect_1"
+                app:tagForeground="@drawable/flat_button_light"
+                app:tagPaddingBottom="8dp"
+                app:tagPaddingLeft="6dp"
+                app:tagPaddingRight="6dp"
+                app:tagPaddingTop="8dp"
+                app:tagTextColor="#E5E5E5"
+                app:tagTextGravity="right"
+                app:tagTextSize="14sp"
+                app:rowGravity="center"
+                app:rowMode="wrap"/>
+
+            <include layout="@layout/layout_buttons"/>
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </FrameLayout>
