--- a/sample/src/main/res/drawable/rounded_rect_1.xml
+++ b/sample/src/main/res/drawable/rounded_rect_1.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:state_selected="false">
         <shape android:shape="rectangle">
 
-            <solid android:color="#009688"/>
+            <solid android:color="#607D8B"/>
             <corners android:radius="4dp"/>
 
         </shape>
