--- a/sample/src/main/res/drawable/rounded_rect_3.xml
+++ b/sample/src/main/res/drawable/rounded_rect_3.xml
@@ -4,7 +4,7 @@
         android:state_selected="false">
         <shape android:shape="rectangle">
 
-            <solid android:color="@color/light_green"/>
+            <solid android:color="@color/cyan"/>
             <corners android:radius="4dp"/>
 
         </shape>
