--- a/sample/src/main/res/drawable/rounded_rect_reverse.xml
+++ b/sample/src/main/res/drawable/rounded_rect_reverse.xml
@@ -4,9 +4,11 @@
         android:state_selected="false">
         <shape android:shape="rectangle">
 
-            <solid android:color="@color/light_green"/>
+            <stroke android:width="1dp"
+                    android:color="#607D8B"/>
             <corners android:radius="4dp"/>
 
         </shape>
     </item>
+
 </selector>
