--- a/sample/src/main/res/layout/fragment_base_sample.xml
+++ b/sample/src/main/res/layout/fragment_base_sample.xml
@@ -11,22 +11,11 @@
         style="@style/Card"
         app:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+        <LinearLayout style="@style/CardContainer">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingBottom="10dp"
-                android:paddingLeft="48dp"
-                android:paddingRight="48dp"
-                android:text="Simple way to represent\nyour #hashtags data"
-                android:textColor="@android:color/primary_text_light"
-                android:textSize="18sp"/>
+                style="@style/CardTitle"
+                android:text="Simple way to represent\nyour #hashtags data"/>
 
             <com.greenfrvr.hashtagview.HashtagView
                 android:id="@+id/hashtags"
@@ -34,6 +23,8 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
+                app:rowGravity="center"
+                app:rowMode="wrap"
                 app:tagBackground="@drawable/rounded_rect_1"
                 app:tagForeground="@drawable/flat_button_light"
                 app:tagPaddingBottom="8dp"
@@ -42,13 +33,10 @@
                 app:tagPaddingTop="8dp"
                 app:tagTextColor="#E5E5E5"
                 app:tagTextGravity="right"
-                app:tagTextSize="14sp"
-                app:rowGravity="center"
-                app:rowMode="wrap"/>
+                app:tagTextSize="14sp"/>
 
             <include layout="@layout/layout_buttons"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
 </FrameLayout>
