--- a/sample/src/main/res/layout/fragment_events_sample.xml
+++ b/sample/src/main/res/layout/fragment_events_sample.xml
@@ -8,7 +8,6 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,22 +22,11 @@
             style="@style/Card"
             app:cardUseCompatPadding="true">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
+            <LinearLayout style="@style/CardContainer">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:paddingBottom="12dp"
-                    android:paddingLeft="48dp"
-                    android:paddingRight="48dp"
-                    android:text="Handle specific events"
-                    android:textColor="@android:color/primary_text_light"
-                    android:textSize="18sp"/>
+                    style="@style/CardTitle"
+                    android:text="Handle specific events"/>
 
                 <FrameLayout style="@style/Section.Container">
                     <TextView
