--- a/sample/src/main/res/drawable/rounded_rect_2.xml
+++ b/sample/src/main/res/drawable/rounded_rect_2.xml
@@ -6,6 +6,10 @@
 
             <solid android:color="@color/light_green"/>
             <corners android:radius="4dp"/>
+            <stroke android:width="1dp"
+                    android:color="@color/dark_green"
+                    android:dashGap="4dp"
+                    android:dashWidth="4dp"/>
 
         </shape>
     </item>
