--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="white_alpha">#8FFF</color>
+
     <color name="green_600">#43A047</color>
+    <color name="teal">#B2DFDB</color>
     <color name="orange_600">#F4511E</color>
 
     <color name="cyan">#0097A7</color>
     <color name="light_green">#689F38</color>
+    <color name="dark_green">#33691E</color>
 
 </resources>
