demo icon + refactor

--- a/sample/src/main/res/layout/fragment_base_sample.xml
+++ b/sample/src/main/res/layout/fragment_base_sample.xml
@@ -34,7 +34,7 @@
                     android:paddingTop="10dp"
                     app:rowGravity="center"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
@@ -52,7 +52,7 @@
                     android:paddingTop="10dp"
                     app:rowGravity="center"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
