--- a/sample/src/main/res/layout/fragment_events_sample.xml
+++ b/sample/src/main/res/layout/fragment_events_sample.xml
@@ -42,7 +42,7 @@
                     android:paddingTop="4dp"
                     app:rowGravity="left"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
@@ -71,7 +71,7 @@
                     app:rowGravity="center"
                     app:rowMode="wrap"
                     app:selectionMode="true"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
