--- a/sample/src/main/res/layout/fragment_gravity_sample.xml
+++ b/sample/src/main/res/layout/fragment_gravity_sample.xml
@@ -43,7 +43,7 @@
                     android:paddingTop="4dp"
                     app:rowGravity="left"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
@@ -68,7 +68,7 @@
                     android:paddingTop="4dp"
                     app:rowGravity="center"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
@@ -95,7 +95,7 @@
                     android:paddingTop="4dp"
                     app:rowGravity="right"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
