--- a/sample/src/main/res/layout/fragment_spacing_sample.xml
+++ b/sample/src/main/res/layout/fragment_spacing_sample.xml
@@ -41,7 +41,7 @@
                     android:paddingTop="4dp"
                     app:rowGravity="center"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="16dp"
                     app:tagPaddingLeft="12dp"
@@ -67,7 +67,7 @@
                     app:rowGravity="center"
                     app:rowMargin="8dp"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagMargin="8dp"
                     app:tagPaddingBottom="8dp"
@@ -93,7 +93,7 @@
                     android:paddingTop="4dp"
                     app:rowGravity="right"
                     app:rowMode="stretch"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
