--- a/sample/src/main/res/layout/fragment_styling_sample.xml
+++ b/sample/src/main/res/layout/fragment_styling_sample.xml
@@ -66,7 +66,7 @@
                     android:paddingTop="10dp"
                     app:rowGravity="center"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_3"
+                    app:tagBackground="@drawable/item_bg_3"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
@@ -83,7 +83,7 @@
                     android:paddingTop="10dp"
                     app:rowGravity="center"
                     app:rowMode="wrap"
-                    app:tagBackground="@drawable/rounded_rect_2"
+                    app:tagBackground="@drawable/item_bg_2"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
@@ -108,7 +108,7 @@
                     android:paddingTop="10dp"
                     app:rowGravity="center"
                     app:rowMode="stretch"
-                    app:tagBackground="@drawable/rounded_rect_1"
+                    app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="8dp"
                     app:tagPaddingLeft="6dp"
