--- a/sample/src/main/res/layout/fragment_contacts.xml
+++ b/sample/src/main/res/layout/fragment_contacts.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="10dp"
@@ -16,9 +15,7 @@
         android:paddingTop="4dp"
         android:scrollbars="none">
 
-        <android.support.v7.widget.CardView
-            style="@style/Card"
-            app:cardUseCompatPadding="true">
+        <android.support.v7.widget.CardView style="@style/Card">
 
             <LinearLayout style="@style/CardContainer">
 
@@ -31,26 +28,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="true"
+                    android:paddingBottom="8dp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
-                    android:paddingBottom="8dp"
                     android:text="@string/contact"/>
 
                 <TextView
                     android:id="@+id/sources"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
-                    android:paddingBottom="8dp"
                     android:text="@string/sources"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
-                    android:paddingBottom="8dp"
                     android:text="@string/check_updates"/>
 
                 <include layout="@layout/layout_buttons"/>
