--- a/sample/src/main/res/layout/fragment_events_sample.xml
+++ b/sample/src/main/res/layout/fragment_events_sample.xml
@@ -18,9 +18,7 @@
         android:paddingTop="4dp"
         android:scrollbars="none">
 
-        <android.support.v7.widget.CardView
-            style="@style/Card"
-            app:cardUseCompatPadding="true">
+        <android.support.v7.widget.CardView style="@style/Card">
 
             <LinearLayout style="@style/CardContainer">
 
@@ -29,57 +27,42 @@
                     android:text="@string/title_events"/>
 
                 <FrameLayout style="@style/Section.Container">
+
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Click events"/>
+                        android:text="@string/section_events_click"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="4dp"
-                    app:rowGravity="left"
-                    app:rowMode="wrap"
+                    style="@style/HashtagView"
                     app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="right"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="4dp">
+                <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Selection events"/>
+                        android:text="@string/section_events_select"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="4dp"
-                    app:rowGravity="center"
-                    app:rowMode="wrap"
+                    style="@style/HashtagView"
+                    app:rowMode="stretch"
                     app:selectionMode="true"
                     app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="center"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
                 <include layout="@layout/layout_buttons"/>
 
