--- a/sample/src/main/res/layout/fragment_gravity_sample.xml
+++ b/sample/src/main/res/layout/fragment_gravity_sample.xml
@@ -16,9 +16,7 @@
         android:paddingTop="4dp"
         android:scrollbars="none">
 
-        <android.support.v7.widget.CardView
-            style="@style/Card"
-            app:cardUseCompatPadding="true">
+        <android.support.v7.widget.CardView style="@style/Card">
 
             <LinearLayout style="@style/CardContainer">
 
@@ -26,84 +24,62 @@
                     style="@style/CardTitle"
                     android:text="@string/title_gravity"/>
 
-                <FrameLayout
-                    style="@style/Section.Container"
-                    android:paddingLeft="4dp">
+                <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Left"/>
+                        android:text="@string/section_gravity_left"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="4dp"
+                    style="@style/HashtagView"
                     app:rowGravity="left"
-                    app:rowMode="wrap"
                     app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="right"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
                 <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Center"/>
+                        android:text="@string/section_gravity_center"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="4dp"
+                    style="@style/HashtagView"
                     app:rowGravity="center"
-                    app:rowMode="wrap"
                     app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="right"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
-                <FrameLayout
-                    style="@style/Section.Container"
-                    android:paddingRight="4dp">
+                <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Right"/>
+                        android:text="@string/section_gravity_right"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="4dp"
+                    style="@style/HashtagView"
                     app:rowGravity="right"
-                    app:rowMode="wrap"
                     app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="right"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
                 <include layout="@layout/layout_buttons"/>
 
