--- a/sample/src/main/res/layout/fragment_spacing_sample.xml
+++ b/sample/src/main/res/layout/fragment_spacing_sample.xml
@@ -16,9 +16,7 @@
         android:paddingTop="4dp"
         android:scrollbars="none">
 
-        <android.support.v7.widget.CardView
-            style="@style/Card"
-            app:cardUseCompatPadding="true">
+        <android.support.v7.widget.CardView style="@style/Card">
 
             <LinearLayout style="@style/CardContainer">
 
@@ -30,78 +28,58 @@
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Paddings"/>
+                        android:text="@string/section_spacing_paddings"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="4dp"
-                    app:rowGravity="center"
-                    app:rowMode="wrap"
+                    style="@style/HashtagView"
                     app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="16dp"
                     app:tagPaddingLeft="12dp"
                     app:tagPaddingRight="12dp"
                     app:tagPaddingTop="16dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="right"
-                    app:tagTextSize="14sp"/>
+                    app:tagTextColor="#E5E5E5"/>
 
                 <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Margins"/>
+                        android:text="@string/section_spacing_margins"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="4dp"
-                    app:rowGravity="center"
+                    style="@style/HashtagView"
                     app:rowMargin="8dp"
-                    app:rowMode="wrap"
                     app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagMargin="8dp"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="right"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
                 <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Stretch"/>
+                        android:text="@string/section_spacing_stretch"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="4dp"
-                    app:rowGravity="right"
+                    style="@style/HashtagView"
                     app:rowMode="stretch"
                     app:tagBackground="@drawable/item_bg_1"
                     app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="center"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
                 <include layout="@layout/layout_buttons"/>
 
