--- a/sample/src/main/res/layout/fragment_styling_sample.xml
+++ b/sample/src/main/res/layout/fragment_styling_sample.xml
@@ -16,9 +16,7 @@
         android:paddingTop="4dp"
         android:scrollbars="none">
 
-        <android.support.v7.widget.CardView
-            style="@style/Card"
-            app:cardUseCompatPadding="true">
+        <android.support.v7.widget.CardView style="@style/Card">
 
             <LinearLayout style="@style/CardContainer">
 
@@ -30,95 +28,70 @@
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Colors &amp; Typefaces"/>
+                        android:text="@string/section_style_colors"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    app:rowGravity="center"
+                    style="@style/HashtagView"
                     app:rowMode="stretch"
                     app:tagBackground="@color/teal"
                     app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="8dp"
-                    app:tagPaddingRight="8dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#00695C"
-                    app:tagTextGravity="center"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_vertical"
+                    app:tagPaddingRight="@dimen/padding_vertical"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#00695C"/>
 
                 <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Spannables &amp; Backgrounds"/>
+                        android:text="@string/section_style_spans"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    app:rowGravity="center"
-                    app:rowMode="wrap"
+                    style="@style/HashtagView"
                     app:tagBackground="@drawable/item_bg_3"
                     app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    app:rowGravity="center"
-                    app:rowMode="wrap"
+                    style="@style/HashtagView"
                     app:tagBackground="@drawable/item_bg_2"
                     app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="center"
-                    app:tagTextSize="14sp"/>
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
                 <FrameLayout style="@style/Section.Container">
 
                     <TextView
                         style="@style/Section.Text"
-                        android:text="Drawables"/>
+                        android:text="@string/section_style_drawables"/>
                 </FrameLayout>
 
                 <com.greenfrvr.hashtagview.HashtagView
                     android:id="@+id/hashtags4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    app:rowGravity="center"
+                    style="@style/HashtagView"
                     app:rowMode="stretch"
                     app:tagBackground="@drawable/item_bg_1"
-                    app:tagForeground="@drawable/flat_button_light"
-                    app:tagPaddingBottom="8dp"
-                    app:tagPaddingLeft="6dp"
-                    app:tagPaddingRight="6dp"
-                    app:tagPaddingTop="8dp"
-                    app:tagTextColor="#E5E5E5"
-                    app:tagTextGravity="center"
-                    app:tagTextSize="14sp"
                     app:tagDrawableLeft="@drawable/ic_github_circle_white_18dp"
-                    app:tagDrawablePadding="4dp"/>
+                    app:tagDrawablePadding="4dp"
+                    app:tagForeground="@drawable/flat_button_light"
+                    app:tagPaddingBottom="@dimen/padding_vertical"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
+                    app:tagPaddingRight="@dimen/padding_horizontal"
+                    app:tagPaddingTop="@dimen/padding_vertical"
+                    app:tagTextColor="#E5E5E5"/>
 
                 <include layout="@layout/layout_buttons"/>
 
