--- a/sample/src/main/res/values-v21/styles.xml
+++ b/sample/src/main/res/values-v21/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="cardElevation">4dp</item>
         <item name="cardCornerRadius">2dp</item>
+        <item name="cardUseCompatPadding">true</item>
         <item name="android:clickable">true</item>
         <item name="android:foreground">@drawable/flat_button_dark</item>
     </style>
