--- a/sample/src/main/res/layout/fragment_styling_sample.xml
+++ b/sample/src/main/res/layout/fragment_styling_sample.xml
@@ -104,14 +104,14 @@
                     android:id="@+id/hashtags5"
                     style="@style/HashtagView"
                     app:rowGravity="center"
-                    app:rowMode="wrap"
+                    app:rowMode="stretch"
                     app:selectionMode="true"
                     app:tagBackground="@drawable/item_bg_1"
                     app:tagDrawablePadding="4dp"
                     app:tagDrawableRight="@drawable/ic_close_white_18dp"
                     app:tagForeground="@drawable/flat_button_light"
                     app:tagPaddingBottom="@dimen/padding_vertical"
-                    app:tagPaddingLeft="8dp"
+                    app:tagPaddingLeft="@dimen/padding_horizontal"
                     app:tagPaddingRight="@dimen/padding_horizontal"
                     app:tagPaddingTop="@dimen/padding_vertical"
                     app:tagSelectedDrawableRight="@drawable/ic_done_white_18dp"
