--- a/sample/src/main/res/values/dimens.xml
+++ b/sample/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="flat_button_padding">8dp</dimen>
 
     <dimen name="regular_text">14sp</dimen>
+    <dimen name="card_title">18sp</dimen>
 </resources>
