--- a/hashtag-view/src/main/res/values/attrs.xml
+++ b/hashtag-view/src/main/res/values/attrs.xml
@@ -48,6 +48,7 @@
         </attr>
         <attr name="rowsQuantity" format="integer"/>
         <attr name="selectionMode" format="boolean"/>
+        <attr name="dynamicMode" format="boolean"/>
     </declare-styleable>
 
 </resources>
